# yagui-desktop

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  installer.rs  lib.rs  main.rs  nodo.rs  server.rs  tray.rs
