[package]
name = "yagui-desktop"
version = "0.1.0"
description = "Yagüi Desktop — agente local del comerciante"
authors = ["marin1882"]
edition = "2021"

[lib]
name = "yagui_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener    = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
tokio             = { version = "1", features = ["full"] }
axum              = "0.7"
tower-http        = { version = "0.5", features = ["cors"] }
reqwest           = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
dirs              = "5"
log               = "0.4"
anyhow            = "1"
zip               = { version = "2", default-features = false, features = ["deflate"] }
tauri-plugin-dialog = "2"
